# taxonomy_tree_creator

./: 3_4_1 bias check.ipynb  3_5 visualization and analysis.ipynb  3_5 visualization utility-privacy trade-off.ipynb  age_taxonimy_tree.csv  age_taxonimy_tree.py  analyze_uniqueness.py  capital_gain_taxonimy_tree.csv  capital_gain_taxonimy_tree.py  capital_loss_taxonimy_tree.csv  capital_loss_taxonimy_tree.py  correlation_check.ipynb  education_num_taxonimy_tree.csv  education_num_taxonimy_tree.py  fnlwgt_taxonimy_tree.py  hours_per_week_taxonimy_tree.py  main.py  pyproject.toml  visualize_uniqueness.py
arx/scenario_a/: scenario_a_coarse.deid  scenario_a_detailed.deid
arx/scenario_b/: scenario_b_coarse.deid  scenario_b_detailed.deid
input-data/: adult-dataset.csv
output-data/: scenario-a-coarse-tax-age.csv  scenario-a-coarse-tax-capital-gain.csv  scenario-b-coarse-tax-capital-loss.csv  scenario-b-coarse-tax-native-country.csv  scenario-b-coarse-tax-occupation.csv  scenario-b-coarse-tax-race.csv  scenario-b-detailed-tax-capitical-gain.csv  scenario-b-detailed-tax-education.csv  scenario-b-detailed-tax-fnlwgt.csv
output-data/scenario-a/coarse/: scenario-a-coarse-tax-marital-status.csv
output-data/scenario-a/detailed/: scenario-a-detailed-tax-age.csv  scenario-a-detailed-tax-relationship.csv  scenario-a-detailed-tax-sex.csv
output-data/scenario-b/coarse/: scenario-b-coarse-tax-education.csv  scenario-b-coarse-tax-relationship.csv
output-data/scenario-b/detailed/: scenario-b-detailed-tax-occupation.csv
output-data/uniqueness-3.6/: uniqueness_results.csv
(+44 files in other folders)
