[tool.poetry]
name = "taxonomy-tree-creator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "taxonomy_tree_creator"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
